# django-drf-testing-service

./: README.md  isort.cfg  pyproject.toml  requirements.txt  setup.cfg
docs/: task.md
testing_platform/: asgi.py  constants.py  settings.py  urls.py  wsgi.py
testing_platform/api/survey_api/: analytics.py  apps.py  serializers.py  urls.py  views.py
testing_platform/survey/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
testing_platform/survey/migrations/: 0001_initial.py
testing_platform/survey/templates/: create_survey.html  survey_analytics.html  survey_list.html  survey_questions.html  survey_submitted.html
